--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
         <meta name="description" content="A student at University of Northern Philippines focusing on
         programming subjects, specifically Web Developing and Software Developing.">
         <title>Mark Angelu's Personal Site</title>
+        <link rel="stylesheet" href="css/styles.css">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
         <table cellspacing="15">
             <tr>
-                <td><img src="images/angelu.png" width="160px" height="160px" alt="Mark Angelu's
+                <td><img src="images/angelu.png"  width="180vw" height="180vh" alt="Mark Angelu's
                     Picture"></td>
-                <td><h1><a href="https://www.facebook.com/markangelum" target="_blank">Mark Angelu Anicas</a></h1>
+                <td><h1>Mark Angelu Anicas</h1>
                     <p><em><strong>Bachelor of Science in Information Technology</strong> student</em></p>
                     <p>I am a student at University of Northern Philippines. My studies focuses on programming subjects,
                         specifically <br> Web Developing and Software Developing. My interests are in technology since when I
